--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_URI="http://localhost:3001/api"
 VITE_BASE_URI="http://localhost:3001"
 # VITE_API_URI="https://chat-app-backend-three-ivory.vercel.app/api"
+# VITE_BASE_URI="https://chat-app-backend-three-ivory.vercel.app"
